# fastapi-randomizer

./: .gitignore  README.md  main.py  pyproject.toml  pytest.ini  render.yaml
.github/workflows/: deploy.yml
static/: index.html  styles.css
tests/: README.md  conftest.py  test_app.py  test_items_endpoints.py  test_random_endpoints.py
